# Async-Payment-Service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_init.py
app/: main.py
app/api/: deps.py
app/api/v1/: payments.py
app/core/: config.py  db.py
app/models/: outbox.py  payment.py
app/schemas/: payment.py
app/services/: outbox.py  payment.py
app/worker/: consumer.py  main.py
