[project]
name = "test-task-app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "sqlalchemy==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "faststream[rabbit]==0.5.33",
    "aio-pika==9.4.3",
    "httpx==0.27.2",
    "python-dotenv==1.0.1",
]
